update some import and libs and trying to fix some initial questions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,7 @@ dependencies = [
     "llama-index>=0.12.22",
     "python-dotenv>=1.0.1",
     "streamlit>=1.43.0",
+    "scikit-learn>=1.6.1",
+    "numpy>=2.2.3",
+    "langchain-openai>=0.3.9",
 ]
