--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,10 @@ dependencies = [
     "llama-index>=0.12.22",
     "python-dotenv>=1.0.1",
     "streamlit>=1.43.0",
+    "streamlit-authenticator>=0.4.2",
+    "unstructured>=0.17.2",
+    "python-docx>=1.1.2"
 ]
+
+[tool.setuptools]
+py-modules = ["main", "functions"]
